app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 */

@import "bootstrap";

html, body { height: 100% }
a:hover { text-decoration: none; }
textarea { height: 230px; }
.container { position: relative }

.field_with_errors input[type="text"], .field_with_errors input[type="password"] {
  border: 1px solid red;
}

#error_explanation ul {
  padding: 0;
  li {
    list-style-type: none;
    color: red;
    font-style: italic
  }
}

#ingredient-list {
  label { display: block; }
}

#smoothies-list {
  .card {
    cursor: pointer;
    &:hover {
      border-color: #9e9e9e;
      transition: all 0.3s ease
    }
    .card-action {
      float: right
    }
  }
}

.btn-add-smoothie { position: absolute; bottom: 10px; right: 10px }

